--- a/src/app/pages/plat/detaildishes/detaildishes.component.scss
+++ b/src/app/pages/plat/detaildishes/detaildishes.component.scss
@@ -6,7 +6,7 @@
   }
   
   .dialog-containe {
-    text-align: center; /* Centrer les éléments inline ou inline-block à l'intérieur */
+    text-align: left; /* Centrer les éléments inline ou inline-block à l'intérieur */
   }
   
   .dialog-title {
