--- a/src/app/pages/plat/newdishes/newdishes.component.html
+++ b/src/app/pages/plat/newdishes/newdishes.component.html
@@ -27,7 +27,7 @@
         <div class=" grid detailPlat col-4">
           <div class="cout  divgray">
             <label for="cout">COUT TOTAL : <span appPriceFormater
-                [priceValue]="plat.cout | number: '1.3-3'">{{plat.cout| number: '1.3-3' }} </span>   {{ usercurrency}}</label>
+                [priceValue]="plat.cout | number: '1.0-3'" >{{plat.cout| number: '1.0-3':'fr-FR' }} </span>   {{ usercurrency}}</label>
           </div>
 
           <div class="poid  divgray">
@@ -61,7 +61,7 @@
 
           <div class="field col-3" pTooltip="Saisissez la quantité">
             <label for="">QUANTITE</label>
-            <p-inputNumber mode="decimal" [minFractionDigits]="2" name="quantite" id="quantite"
+            <p-inputNumber mode="decimal" [minFractionDigits]="3" name="quantite" id="quantite"
               [(ngModel)]="recetteSelectione.net" [showButtons]="true" [min]="0"
               (ngModelChange)="changePoid()"></p-inputNumber>
           </div>
@@ -91,7 +91,7 @@
             <div class="info-cell">{{detail?.recipe?.name}}</div>
             <div class="info-cell">{{detail?.quantity| number: '1.0-3' }} KG</div>
             <div class="info-cell"><span appPriceFormater [priceValue]="detail.cout | number: '1.0-3'">{{detail?.cout|
-                number: '1.0-3' }}</span> {{ usercurrency }}</div>
+                number: '1.0-3':'fr-FR' }}</span> {{ usercurrency }}</div>
             <div class="info-cell">
               <button pButton pRipple type="button" icon="pi pi-trash" class="p-button p-button-text p-button-icon-only"
                 style="width: 20px; height: 20px; font-size: 12px;" (click)="confirmDeleteComposition(detail,i)">
