--- a/src/app/pages/product/product.component.html
+++ b/src/app/pages/product/product.component.html
@@ -270,7 +270,7 @@
   </div>
 
 </ng-template>
-<p-dialog [(visible)]="camionDialog" appendTo="body" [style]="{width: '850px'}" header="Enregistrement d'un produit" [modal]="true"
+<p-dialog [(visible)]="camionDialog" appendTo="body" [style]="{width: '850px'}" header="NOUVEAU PRODUIT" [modal]="true"
             class="p-fluid">
             <div class="grid">
               <form class=" newform col-12" #f="ngForm" (ngSubmit)="addProduct()">
