--- a/src/app/pages/signup/signup.component.html
+++ b/src/app/pages/signup/signup.component.html
@@ -10,7 +10,9 @@
 <body>
   <!-- <p-toast /> -->
   <div class="login-container">
-    <div class="login-image-section" style="background-image: url('assets/images/logimage.jpg');">
+    <!-- <div class="login-image-section" style="background-image: url('assets/images/logimage.jpg');"> -->
+      <div class="login-image-section" style="background-image: url('assets/images/cook.jpeg');">
+      
       <!-- Image de fond ou autre contenu -->
     </div>
 
