--- a/src/app/layouts/full/full.component.html
+++ b/src/app/layouts/full/full.component.html
@@ -25,7 +25,7 @@
         <app-sidebar (toggleMobileNav)="sidenav.toggle()" [showToggle]="isOver"></app-sidebar>
         <ng-scrollbar class="position-relative" style="height: 100%">
           <mat-nav-list class="sidebar-list">
-            @for(item of navItems; track item) {
+            @for(item of filteredNavItems; track item) {
             <app-nav-item [item]="item" (notify)="sidenav.toggle()">
             </app-nav-item>
             }
@@ -54,7 +54,7 @@
       <app-sidebar> </app-sidebar>
       <ng-scrollbar class="position-relative" style="height: 100%">
         <mat-nav-list class="sidebar-list">
-          @for(item of navItems; track item) {
+          @for(item of filteredNavItems; track item) {
           <app-nav-item [item]="item" (notify)="sidenav.toggle()">
           </app-nav-item>
           }
