--- a/src/app/pages/catalogue-de-prix/catalogue-de-prix.component.html
+++ b/src/app/pages/catalogue-de-prix/catalogue-de-prix.component.html
@@ -1,127 +1,122 @@
+<!-- RECHERCHE PRODUIT -->
 <mat-card class="cardWithShadow">
   <mat-card-content class="p-24">
-    <div class="row justify-content-between gap-16">
-      <div class="col-lg-12">
+    <div class="row justify-content-between gap-4">
+      <div class="col-12">
         <mat-form-field appearance="outline" class="w-100 hide-hint">
           <input [(ngModel)]="motRecherche"
-            matInput
-            placeholder="Rechercher"
-            (keyup)="recherche()"
-          />
+                 matInput
+                 placeholder="RECHERCHER UN PRODUIT"
+                 (keyup)="recherche()" />
           <mat-icon matSuffix>
             <i-tabler name="search" class="icon-20"></i-tabler>
           </mat-icon>
         </mat-form-field>
       </div>
-      <!-- <div class="col-lg-4 d-flex align-items-center justify-content-end">
-        <button mat-flat-button (click)="openDialogAdd()" color="primary">
-          Ajouter un Produit
+      <!-- Bouton action si besoin -->
+      <!--
+      <div class="col-12 d-flex justify-content-end mt-2">
+        <button mat-flat-button color="primary" (click)="openDialogAdd()">
+          AJOUTER UN PRODUIT
         </button>
-      </div> -->
+      </div>
+      -->
     </div>
   </mat-card-content>
 </mat-card>
-<mat-card class="cardWithShadow">
+
+<!-- TABLEAU PRODUITS -->
+<mat-card class="cardWithShadow mt-4">
   <mat-card-content class="p-24">
     <div class="table-responsive">
       <table mat-table [dataSource]="dataSource" class="w-100">
-        <ng-container  matColumnDef="nom produit">
-          <th  mat-header-cell *matHeaderCellDef class="f-s-16 f-w-600">PRODUIT</th>
-          <td style="cursor: pointer;" (click)="openDialog(product.product)" mat-cell *matCellDef="let product">
+
+        <!-- NOM PRODUIT -->
+        <ng-container matColumnDef="nom produit">
+          <th mat-header-cell *matHeaderCellDef class="f-s-16 f-w-600">PRODUIT</th>
+          <td mat-cell *matCellDef="let product" class="cursor-pointer f-s-14"
+              (click)="openDialog(product.product)">
             {{ product.product.name }}
           </td>
         </ng-container>
 
-        <ng-container  matColumnDef="categorie">
-          <th   mat-header-cell *matHeaderCellDef class="f-s-16 f-w-600">
-            CATEGORIE
-          </th>
-          <td style="cursor: pointer;" (click)="openDialog(product.product)" mat-cell *matCellDef="let product" class="f-s-14">
+        <!-- CATEGORIE -->
+        <ng-container matColumnDef="categorie">
+          <th mat-header-cell *matHeaderCellDef class="f-s-16 f-w-600">CATEGORIE</th>
+          <td mat-cell *matCellDef="let product" class="cursor-pointer f-s-14"
+              (click)="openDialog(product.product)">
             {{ product.product.category?.name }}
           </td>
         </ng-container>
 
-        <ng-container  matColumnDef="conditioning">
-          <th   mat-header-cell *matHeaderCellDef class="f-s-16 f-w-600">
-            CONDITIONNEMENT
-          </th>
-          <td style="cursor: pointer;" (click)="openDialog(product.product)" mat-cell *matCellDef="let product" class="f-s-14">
+        <!-- CONDITIONNEMENT -->
+        <ng-container matColumnDef="conditioning">
+          <th mat-header-cell *matHeaderCellDef class="f-s-16 f-w-600">CONDITIONNEMENT</th>
+          <td mat-cell *matCellDef="let product" class="cursor-pointer f-s-14"
+              (click)="openDialog(product.product)">
             {{ product.product.conditioning?.name }}
           </td>
         </ng-container>
 
-
-        <!-- <ng-container matColumnDef="action">
-          <th mat-header-cell *matHeaderCellDef class="f-s-16 f-w-600">
-            Action
-          </th>
-          <td mat-cell *matCellDef="let product" class="action-link">
-            <a
-            (click)="openDialog(product.product)"
-              class="m-r-10 cursor-pointer"
-              ><i-tabler name="eye" class="icon-18"></i-tabler
-            ></a>
-          </td>
-        </ng-container> -->
-
+        <!-- Lignes -->
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
       </table>
+
+      <!-- PAGINATION -->
       <mat-paginator
-      [length]="totalRows"
-      [pageSize]="rows"
-      [pageSizeOptions]="[10, 25, 50]"
+        [length]="totalRows"
+        [pageSize]="rows"
+        [pageSizeOptions]="[10, 25, 50]"
         showFirstLastButtons
-      (page)="onPageChange($event)">
+        (page)="onPageChange($event)">
       </mat-paginator>
     </div>
   </mat-card-content>
 </mat-card>
 
-
-
+<!-- DIALOG DETAIL PRIX PAR FOURNISSEUR -->
 <ng-template #dialogTemplate>
-  <mat-dialog-content style="max-width: 1200px; padding: 16px;">
-
-    <!-- Si priceData existe, afficher le tableau -->
+  <mat-dialog-content style="max-width: 1200px; padding: 24px;">
     <div *ngIf="priceData; else noPriceData">
       <div class="dialog-container">
-        <!-- Titre de la boîte de dialogue -->
-        <h2 class="dialog-title"> DETAILS DES PRIX PAR FOURNISSEUR </h2>
-        <h4 style="text-align: center;">{{ prouit.name }} 
-        </h4>
-        <span style="text-align: center;">
-          <i>Categorie : {{ prouit.category?.name }} Conditionnement : {{ prouit.conditioning?.name }}</i>
-        </span>
-        <!-- Tableau élégant -->
-        <div class="info-table">
-          <!-- En-tête des colonnes -->
+        <h2 class="dialog-title mb-2 text-center">DÉTAILS DES PRIX PAR FOURNISSEUR</h2>
+        <h4 class="text-center f-s-16">{{ prouit.name }}</h4>
+        <p class="text-center f-s-14">
+          <i>CATEGORIE : {{ prouit.category?.name }} | CONDITIONNEMENT : {{ prouit.conditioning?.name }}</i>
+        </p>
+
+        <div class="info-table mt-4">
           <div class="info-header">
             <div class="info-header-cell">FOURNISSEUR</div>
             <div class="info-header-cell">PRIX</div>
             <div class="info-header-cell">ADRESSE</div>
           </div>
 
-          <!-- Ligne Fournisseur -->
-
           <div *ngFor="let pric of price" class="info-row">
-            <div class="info-cell label">{{ pric?.shop?.name || 'Non renseigné' }}</div>
-            <div class="info-cell value">
-              {{ pric?.value || 'Non renseigné' }}
-              {{ pric?.currency?.symbol || 'Non renseigné'  }} / {{ pric?.product.unit.code }}
+            <div class="info-cell label">
+              {{ pric?.shop?.name || 'Non renseigné' }}
             </div>
             <div class="info-cell value">
-              {{ pric?.shop.addressPrincipale?.streetName }}, {{ pric?.shop.addressPrincipale?.streetNumber }}, {{ pric?.shop.addressPrincipale?.label }}, {{ pric?.shop.addressPrincipale?.city }}, {{ pric?.shop.addressPrincipale?.country.name }}.
-              </div>
+              {{ pric?.value || 'Non renseigné' | number :'1.0-3':'fr-FR' }} {{ pric?.currency?.symbol || '' }} / {{ pric?.product.unit.code }}
+            </div>
+            <div class="info-cell value">
+              {{ pric?.shop?.addressPrincipale?.streetName }},
+              {{ pric?.shop?.addressPrincipale?.streetNumber }},
+              {{ pric?.shop?.addressPrincipale?.label }},
+              {{ pric?.shop?.addressPrincipale?.city }},
+              {{ pric?.shop?.addressPrincipale?.country?.name }}
+            </div>
           </div>
         </div>
       </div>
     </div>
 
-    <!-- Si priceData n'existe pas, afficher un message alternatif -->
-    <ng-template  #noPriceData>
-      <h1 style="text-align: center; margin-top: 80px;">Pas de course pour ce produit</h1>
+    <!-- Alternative si aucune donnée -->
+    <ng-template #noPriceData>
+      <div class="text-center mt-5">
+        <h3 class="text-gray-500">PAS DE COURSE POUR CE PRODUIT</h3>
+      </div>
     </ng-template>
-
   </mat-dialog-content>
 </ng-template>
