--- a/src/app/pages/planification/detail-estimation/detail-estimation.component.html
+++ b/src/app/pages/planification/detail-estimation/detail-estimation.component.html
@@ -1,130 +1,66 @@
-
-<div style="display: flex; justify-content: space-between; align-items: center; margin: 0px;">
+<div style="display: flex; justify-content: space-between; align-items: center; margin: 0px 0 24px 0;">
     <div>
-        <h1>PROGRAMME DES PLATS DU {{ config.data.startDate | date:'dd/MM/yyyy'}} AU {{ config.data.endDate | date:'dd/MM/yyyy'}}</h1>
+      <h1>PROGRAMME DES PLATS DU {{ config.data.startDate | date:'dd/MM/yyyy' }} AU {{ config.data.endDate | date:'dd/MM/yyyy' }}</h1>
     </div>
     <div>
-        <p-button (onClick)="showDialog()" label="GENERER FEUILLE DE COURSE" icon="pi pi-eye" />
+      <p-button (onClick)="showDialog()" label="GÉNÉRER FEUILLE DE COURSE" icon="pi pi-eye"></p-button>
     </div>
-</div>
-<!-- Première Table : Preparation -->
- <!---div class="listdiv"  *ngFor="let plat of data,let k=index">
+  </div>
+  <div class="listdiv">
     <table>
-        <thead>
-            <tr>
-                <th colspan="12" style="text-align: left;"><b>{{plat.name}} : {{ getQuantite(plat.id) }} Planifié(s)</b></th>
-            </tr>
-        </thead>
-        <tbody>
-          <tr >
-
-                <th colspan="12" style="text-align: center;"><i>LISTE DES RECETTES</i></th>
-                <td>QTE INITIALE</td>
-                <td>STOCK AVANT</td>
-                <td>QTE PLANIFIEE</td>
-                <td class="highlight">STOCK APRES</td>
-         </tr>
-        <tr *ngFor="let rec of plat.recipes ">
-                  <th colspan="12" style="text-align: left;">{{ rec.recipe.name }}</th>
-                  <td>{{ rec.quantity |   number : '.1-5'}}  KG</td>
-                  <td>{{ rec.recipe.stock |  number : '.1-5'}} KG</td>
-                  <td>{{ rec.quantity * getQuantite(plat.id) |  number : '.1-5'}} KG</td>
-                  <td class="highlight" [style.color]="rec.recipe.stock -  (rec.quantity * getQuantite(plat.id)) < 0 ? 'red' : 'black'">{{ rec.recipe.stock -  (rec.quantity * getQuantite(plat.id)) |  number : '.1-5'}} KG</td>
-
+      <thead>
+        <tr>
+          <th colspan="12" style="text-align: center;"><b><i>LISTE DES PLATS</i></b></th>
+          <td><b><i>NBRE TOTAL PLANIFIÉ</i></b></td>
         </tr>
-            <tr>
-
-                <th colspan="12" style="text-align: center;"><i>DETAILS DES INGREDIENTS PAR RECETTE</i></th>
-                <td>INGREDIENT</td>
-                <td>STOCK AV KG</td>
-                <td>QTE PLANIFIEE KG</td>
-                <td>STOCK APRES KG</td>
-                <td>OBSERVATION</td>
-            </tr>
-            <div *ngFor="let plt of data,let k=index">
-                <div *ngFor="let rec of plt.recipes,let k=index">
-                <tr *ngFor="let pr of rec.detailList,let k=index">
-                    <th colspan="12" style="text-align: center;">{{pr.ingredient?.name}}</th>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-            </div>
-            </div>
-
-        </tbody>
-        <tbody *ngFor="let composition of  data2[k]?.compositionList,let k=index">
-            <tr *ngFor="let detail of composition.recipe.detailList, let j=index">
-                <td *ngIf="j==0" [rowSpan]="composition.recipe.detailList">{{composition?.recipe?.name}}</td>
-                <td>{{detail?.ingredient?.name}}</td>
-                <td></td>
-                <td>{{detail?.brut  |  number : '.1-3'}}</td>
-                <td>{{detail?.stockApres  |  number : '.1-3'}}</td>
-                <td [ngClass]="{'insufficient': detail.stockApres<0}" ><span *ngIf="detail.stockApres<0" >Insuffisant</span></td>
-            </tr>
-
-        </tbody>
+      </thead>
+      <tbody>
+        <tr *ngFor="let plat of data['dishes']">
+          <th colspan="12">{{ plat.dishes.name }}</th>
+          <td>{{ plat.quantity }}</td>
+        </tr>
+      </tbody>
     </table>
-</div>--->
-<!--pre>{{ data | json }}</pre--->
-<div class="listdiv">
-    <table>
-        <thead>
-            <tr>
-                <th colspan="12" style="text-align: center;"><b><i>LISTE DES PLATS</i></b></th>
-                <td><b><i>NBRE TOTAL PLANIFIE</i></b></td>
-            </tr>
-            <tr *ngFor="let plat of data['dishes']">
-                <th colspan="12" style="text-align: left;">{{plat.dishes.name}}</th>
-                <td>{{ plat.quantity}}</td>
-            </tr>
-        </thead>
-    </table>
-</div>
+  </div>
   <table>
-          <tbody>
-              <tr >
-
-                    <th colspan="12" style="text-align: center;"><i>LISTE DES RECETTES</i></th>
-                    <td>STOCK AVANT</td>
-                    <td>QTE NET PLANIFIEE</td>
-                    <!--td>QTE BRUT PLANIFIEE</td-->
-                    <td class="highlight">STOCK APRES</td>
-
-             </tr>
-             <tr *ngFor="let rec of data['recipes']">
-              <th colspan="12" style="text-align: left;">{{ rec.recipe.name }}</th>
-              <td>{{ rec?.recipe.stock ?? 0 | number:'1.0-3' }} KG</td>
-              <td>{{ rec?.quantity | number:'1.0-3' }} KG</td>
-              <!--td>{{ (rec?.quantity * rec?.recipe?.ratio) | number:'1.0-3' }} KG</td-->
-              <td class="{{ rec?.currentStock < 0 ? 'insufficient' : '' }}">
-                  {{ rec?.currentStock | number:'1.0-3' }} KG
-              </td>
-            </tr>
-          </tbody>
+    <thead>
+      <tr>
+        <th colspan="12" style="text-align: center;"><i>LISTE DES RECETTES</i></th>
+        <td>STOCK AVANT</td>
+        <td>QTE NET PLANIFIÉE</td>
+        <td class="highlight">STOCK APRÈS</td>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let rec of data['recipes']">
+        <th colspan="12">{{ rec.recipe.name }}</th>
+        <td>{{ rec?.recipe.stock ?? 0 | number:'1.0-3' }} KG</td>
+        <td>{{ rec?.quantity | number:'1.0-3' }} KG</td>
+        <td class="{{ rec?.currentStock < 0 ? 'insufficient' : '' }}">
+          {{ rec?.currentStock | number:'1.0-3' }} KG
+        </td>
+      </tr>
+    </tbody>
   </table>
-
   <table>
-          <tbody>
-              <tr >
-
-                    <th colspan="12" style="text-align: center;"><i>LISTE DES INGREDIENTS</i></th>
-                    <td>STOCK AVANT</td>
-                    <td>QTE PLANIFIEE</td>
-                    <td class="highlight">STOCK APRES</td>
-
-             </tr>
-             <tr *ngFor="let rec of data['products']">
-              <th colspan="12" style="text-align: left;">{{ rec.product.name }}</th>
-              <td>{{ rec?.initialStock ?? 0 | number:'1.0-2' }} KG</td>
-              <td>{{ rec?.qtePlanifie | number:'1.0-2' }} KG</td>
-              <td class="{{ rec?.currentStock < 0 ? 'insufficient' : '' }}">
-                  {{ rec?.currentStock | number:'1.0-2' }} KG
-              </td>
-            </tr>
-          </tbody>
+    <thead>
+      <tr>
+        <th colspan="12" style="text-align: center;"><i>LISTE DES INGRÉDIENTS</i></th>
+        <td>STOCK AVANT</td>
+        <td>QTE PLANIFIÉE</td>
+        <td class="highlight">STOCK APRÈS</td>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let rec of data['products']">
+        <th colspan="12">{{ rec.product.name }}</th>
+        <td>{{ rec?.initialStock ?? 0 | number:'1.0-3' }} KG</td>
+        <td>{{ rec?.qtePlanifie | number:'1.0-3' }} KG</td>
+        <td class="{{ rec?.currentStock < 0 ? 'insufficient' : '' }}">
+          {{ rec?.currentStock | number:'1.0-3' }} KG
+        </td>
+      </tr>
+    </tbody>
   </table>
-
-
+   
+  
