--- a/src/app/pages/planification/detail-estimation/detail-estimation.component.scss
+++ b/src/app/pages/planification/detail-estimation/detail-estimation.component.scss
@@ -88,3 +88,56 @@ th {
       }
       
 }
+
+//------------------------------------------------------//
+table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-bottom: 24px;
+    font-family: 'Segoe UI', sans-serif;
+    background-color: #fff;
+    box-shadow: 0 0 10px rgba(0,0,0,0.05);
+    border-radius: 8px;
+    overflow: hidden;
+  }
+  
+  thead {
+    background-color: #e8f5e9; // vert très clair
+    color: #2e7d32; // vert foncé
+    font-weight: 600;
+  }
+  
+  td, th {
+    padding: 12px 16px;
+    border-bottom: 1px solid #ddd;
+    text-align: left;
+    font-size: 14px;
+  }
+  
+  tr:last-child td {
+    border-bottom: none;
+  }
+  
+  .highlight {
+    font-weight: 600;
+    color: #2e7d32;
+  }
+  
+  .insufficient {
+    color: red;
+    font-weight: bold;
+  }
+  
+  h1 {
+    font-size: 22px;
+    color: #2e7d32;
+  }
+  
+  p-button {
+    margin-left: auto;
+  }
+  
+  .listdiv {
+    margin-top: 32px;
+  }
+  
